# hw_test

./: README.md  generate_arr.py  greet.py  main.py  pyproject.toml
